@@ -1415,6 +1415,7 @@ define_mpn(sublsh1_n)
 define_mpn(sublsh1_nc)
 define_mpn(sublsh2_n)
 define_mpn(sublsh2_nc)
+define_mpn(sublsh_n)
 define_mpn(sqrtrem)
 define_mpn(sub)
 define_mpn(sub_1)
